# trix-neo

./: .dockerignore  .gitignore  BIRDS_EYE_VIEW.md  CHANGELOG.md  CMakeLists.txt  CODE_OF_CONDUCT.md  CONTRIBUTING.md  CRITICAL_ITEMS.md  DIAMOND.md  Dockerfile  IMPLEMENTATION_SUMMARY.md  LICENSE  PRODUCTS_AND_MOATS.md  PROGRESS.md  PROGRESS_FINAL.md  README.md  REPO_HARDENING_PLAN.md  STRATEGIC_DOCS_INDEX.md  STRATEGY.md
.claude/: settings.local.json
.github/workflows/: ci.yml
cmake/: TriXConfig.cmake.in
docs/: HSOS_APPLICATION_DOMAINS.md  HSOS_STEP_CHANGE.md
docs/superpowers/plans/: 2026-03-19-hsos-native-inference.md  2026-03-19-ternary-smmla-integration.md  2026-03-21-cwru-bearing-chip.md  2026-03-21-parallel-hsos-tick.md  2026-03-21-smmla-cmake.md  2026-03-21-training-pipeline.md
docs/wiki/: API-Reference.md  Architecture.md  Benchmarks.md  Deployment.md  Getting-Started.md  Home.md  Security.md  Toolchain.md
journal/: 01_zor_exploration.md  02_pure_trix_setup.md  addressable_intelligence_nodes.md  addressable_intelligence_raw.md  addressable_intelligence_reflect.md  addressable_intelligence_synth.md  convergence_nodes.md  convergence_raw.md  convergence_reflect.md  convergence_synth.md  hsos_stepchange_nodes.md  hsos_stepchange_raw.md  hsos_stepchange_reflect.md  hsos_stepchange_synth.md  periodic_table_nodes.md  periodic_table_raw.md  periodic_table_reflect.md  periodic_table_synth.md  resonance_cube_nodes.md  resonance_cube_raw.md  resonance_cube_reflect.md  resonance_cube_synth.md  soft_chips_ux_nodes.md  soft_chips_ux_raw.md  soft_chips_ux_reflect.md  soft_chips_ux_synth.md  trix_shines_nodes.md  trix_shines_raw.md  trix_shines_reflect.md  trix_shines_synth.md  viz_quest_nodes.md  viz_quest_raw.md  viz_quest_reflect.md  viz_quest_synth.md
proofs/6502/: Makefile  README.md  frozen_6502_standalone.c  viz_6502.py
tools/: Makefile  README.md  bench_forged  lnn2trix.py  lnn2trix_forge.py  test_cfc_forge  test_forged_neon_compile  test_linear_forge  trix
tools/include/: cfc_forge.h  codegen.h  forged_bridge.h  linear_forge.h  softchip.h
tools/output_cfc/: Makefile  cfc_test.c  cfc_test.h  cfc_test_linear.h  cfc_test_test.c
tools/python/: dataset.py  export.py  model.py  test_pipeline.py  train.py  trix.py  trix_demo.py  trix_python.cpp
tools/src/: cfc_forge.c  codegen.c  linear_forge.c  softchip.c  trix.c  trix_run.c
tools/test/: README.md  bench_forged_vs_handwritten.c  bench_hsos_parallel.c  bench_linear.c  cfc_test.trix  e2e_cfc_demo.c  fuzz_softchip.c  test_cfc_forge.c  test_forged_neon_compile.c  test_i8mm_forge.c  test_linear_forge.c  test_parser_security.c  test_toolchain_integration.c
viz/: README.md  viz_core.py  viz_trace.py
zor/: Makefile  README.md  evolved_chip.h
zor/docs/: ADDRESSABLE_INTELLIGENCE.md  ARCHITECTURE.md  CFC_ENTROMORPH.md  CUDA_ARCHITECTURE.md  ENGINEERING.md  ENTROMORPHIC_OS.md  FORGE.md  FUSE_BOX.md  HSOS.md  PERIODIC_TABLE.md  PRODUCTION_READINESS.md  README.md  REPOSITORY_AUDIT.md  SESSION_LOG_SECOND_STAR.md  SOFT_CHIPS.md  STEP_CHANGE.md  TECHNICAL_ASSESSMENT.md  THE_5_PRIMES.md  THROUGHLINE.md  VALIDATION.md  ZIT_DETECTION.md
zor/examples/: 01_hello_xor.c  02_logic_gates.c  03_full_adder.c  04_activations.c  05_matmul.c  06_tiny_mlp.c  07_cfc_demo.c  08_evolution_demo.c  09_hsos_demo.c  README.md
zor/foundry/: README.md  genesis.c  test_seed  test_seed.c
zor/foundry/seeds/: sine_seed.h
zor/include/: alpha_device.cuh  hsos.h  shm_protocol.h
zor/include/trixc/: alu6502.h  apu.h  cfc_shapes.h  chip_private.h  entromorph.h  errors.h  hsos_infer.h  linear_runtime.h  logging.h  memory.h  metrics.h  onnx_shapes.h  providence.h  runtime.h  shapefabric.h  shapes.h  sparse_octave.h  thread.h  validation.h  version.h
zor/src/: cortex.cu  errors.c  hsos.c  hsos_infer.c  linear_runtime.c  logging.c  metrics.c  runtime.c  sentinel  sentinel.c  thread.c  validation.c  version.c  visor.cu  visor_bridge.cu  visor_fallback.cu  visor_reflex.cu
zor/test/: README.md  bench_evolution.c  bench_gym.c  determinism_test.c  frequency_sweep.c  generalization_test.c  noise_ramp.c  sawtooth_test.c  stability_test.c  test_cfc.c  test_errors  test_errors.c  test_hsos_infer.c  test_integration.c  test_linear_runtime.c  test_logging_demo  test_logging_demo.c  test_memory  test_memory.c  test_memory_asan  test_parallel_tick.c  test_rigorous.c  test_runtime.c  test_runtime_debug.c  test_runtime_debug2.c  test_runtime_full.c  test_thread  test_thread.c  test_validation  test_validation.c  test_version.c  zit_test  zit_test.c
